2008-09-16  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: add reference to the below binfo support
      of SMPP DLRs.
    * gw/smsc/smsc_smpp.c: add 'binfo' support for SMPP DLRs, in order to proxy
      the DLR message 'err' component via our msg struct value. This allows
      users to specify the '%B' escape code in 'dlr-url' too, beside the
      normal DLR value '%d' to provision the DLR error code to the backend
      application.
          
2008-09-12 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: switched internal queue to gw_prioqueue instead of 
      List.

2008-08-24  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_smpp.c: switch if condition statement to ensure we don't 
      run into an assertion panic within octstr_get_char() for a NULL'ed
      source_addr.
      
2008-08-13  Stipe Tolj  <stolj at kannel.org>
    * gwlib/http.h: add complete list of HTTP/1.1 return codes. NLC.
    
2008-08-08  Stipe Tolj  <stolj at kannel.org>
    * doc/doxygen/kannel.conf: change to 'CREATE_SUBDIRS = YES' for the sake
      of filesystem IO performance during creation and read.

2008-08-06 Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.[ch]: added 2 new functions (http_set_client_timeout, 
      http_cgivar_dump_into). Fixes:
          1) use conn_open_ssl_nb in conn_pool_get
          2) reinject redirect requests into the front of the queue
          3) don't panic if we try to put slow client into port queue but
             listen port was already closed
          4) don't return already dead client in http_accept_request

2008-08-06 Alexander Malysh <amalysh at kannel.org>
    * gwlib/fdset.[ch]: added new function fdset_set_timeout.

2008-08-06 Alexander Malysh <amalysh at kannel.org>
    * gwlib/conn.[ch]: added new function conn_open_ssl_nb.

2008-08-06 Alexander Malysh <amalysh at kannel.org>
    * configure.in, configure: added MacOSX10.5.sdk

2008-08-02 Alexander Malysh <amalysh at kannel.org>