@@ -222,6 +222,8 @@ gw/html.c -text
 gw/html.h -text
 gw/kannel.8 -text
 gw/key.pem -text
+gw/load.c -text
+gw/load.h -text
 gw/mime_decompiler.c -text
 gw/mime_decompiler.h -text
 gw/msg-decl.h -text
